# MediumAutomation

./: .env.example  .gitignore  ARCHITECTURE.md  Highlights_AI.csv  IMPROVEMENT_PLAN.md  README.md  main.py  pyproject.toml
ai_news_digest/: agentic_pipeline.py  config.py  config_keys_example.py  main_notebook_to_script.md  main_test.ipynb  marimo_test.py  pipeline.py  prompts.py  run_pipeline.ipynb  utils.py
ai_news_digest/agents/: __init__.py  builder.py  collector.py  orchestrator.py  ranker.py  setup.py  summarizer.py
ai_news_digest/builder/: images.py  medium.py
ai_news_digest/llm/: azure_client.py  base.py  openai_client.py  openrouter.py
ai_news_digest/outputs/: Highlights_AI_Diciembre_20251201_093603.csv  Highlights_AI_Diciembre_20251201_093603.txt  Highlights_AI_Diciembre_20251209_095311.csv  Highlights_AI_Diciembre_20251209_095311.txt  Highlights_AI_Diciembre_25_20251230_115328.csv  Highlights_AI_Diciembre_25_20251230_115328.txt  Highlights_AI_Noviembre_20251029_153946.csv  Highlights_AI_Noviembre_20251029_153946.txt  Highlights_AI_Noviembre_20251103_180240.csv  Highlights_AI_Noviembre_20251103_180240.txt  Highlights_AI_Octubre_20251009_173514.csv  Highlights_AI_Octubre_20251009_173514.txt  (+24 more)
outputs/: Highlights_AI_febrero_26_test_20260306_163527.csv  Highlights_AI_febrero_26_test_20260306_163527.txt  Highlights_AI_highlights_test_0226_20260306_174845.csv  Highlights_AI_highlights_test_0226_20260306_174845.txt  Highlights_AI_highlights_test_0226_20260306_174845_articles_raw.csv
tests/: test_phase1.py  test_phase2.py  test_rss_fetch.py
(+3 files in other folders)
